# MultisigPool

./: Makefile  PACKAGING.md  README.md  RUST_IMPLEMENTATION.md  go.mod  package-lock.json  package.json  tsup.config.ts
docs/: typescript_golang_rust_cross_validation.md
examples/multisig/: go_generate.go
examples/offline_triple_test/: main.go
examples/online_dual_test/: main.go
examples/online_triple_test/: main.go
examples/payment_proof_compare/: compare.go  fixture.json  ts_runner.ts
examples/rust_go_comparison/: Cargo.toml  main.go  run_cross_validation.sh
examples/txtest/: compare.go  fixture.json  ts_runner.ts
pkg/: index.go
pkg/dual_endpoint/: 1base_tx.go  2client_spend_tx.go  3server_sign.go  4client_spend_tx_update.go  5server_sign_update.go  6verify.go  dual_endpoint_test.go  op_return_spend_test.go  script.go
pkg/libs/: multisig.go  op_return.go  op_return_test.go
pkg/triple_endpoint/: 1base_tx.go  2client_spend_tx.go  3server_sign.go  4client_spend_tx_update.go  5server_sign_update.go  6verify.go  op_return_spend_test.go  script.go  triple_endpoint_test.go  verify_signatures_test.go
rust/: Cargo.toml  README.md
rust/examples/: cross_validation.rs  cross_validation_comparison.rs
rust/src/: error.rs  lib.rs  multisig.rs  types.rs
rust/tests/: cross_validation_test.rs  lib_test.rs
scripts/: cross_validate_rust_go.sh  publish-all.sh  publish-go.sh  run_rust_go_cross_validation.sh
src/: index.ts
src/dual_endpoint/: 2client_spend_tx.ts  index.ts
src/libs/: OP_RETURN.ts
tests/: op_return.test.ts
(+11 files in other folders)
